#162 : Converted ConfigurationManager to a Spring component
* Also removed powermock from bxbot-repository - no longer needed :-)