@@ -12,45 +12,15 @@ dependencies {
 
     implementation libraries.springdoc_openapi_ui
 
-    testImplementation libraries.powermock_junit
-    testImplementation libraries.powermock_api_easymock
     testImplementation libraries.easymock
     testImplementation libraries.spring_boot_starter_test
     testImplementation libraries.snake_yaml
 }
 
-// See: https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17
-test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.io=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.nio.file=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.math=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.time=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.security=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.net=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
-test.jvmArgs "--add-exports", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
-
 jacocoTestCoverageVerification {
     violationRules {
         rule {
             element = 'CLASS'
-            excludes = [
-                    // Ignore classes tested using Powermock. JaCoCo won't/can't instrument them:
-                    // "... right now there is NO WAY TO USE PowerMock with JaCoCo On-the-fly instrumentation."
-                    // See https://github.com/powermock/powermock/wiki/Code-coverage-with-JaCoCo
-                    'com.gazbert.bxbot.repository.yaml.MarketConfigYamlRepository',
-                    'com.gazbert.bxbot.repository.yaml.StrategyConfigYamlRepository',
-                    'com.gazbert.bxbot.repository.yaml.EngineConfigYamlRepository',
-                    'com.gazbert.bxbot.repository.yaml.ExchangeConfigYamlRepository',
-                    'com.gazbert.bxbot.repository.yaml.EmailAlertsConfigYamlRepository'
-            ]
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
